Project is Done

--- a/letter_reco.ipynb
+++ b/letter_reco.ipynb
@@ -198,7 +198,16 @@
     "\n",
     "# Class labels\n",
     "class_labels = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z']\n",
-    "print(f'Predicted class: {class_labels[predicted_class]}')\n"
+    "print(f'Predicted class: {class_labels[predicted_class]}')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hesitation is Defeat"
    ]
   }
  ],
